# aoc-runner

./: .autorc  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  renovate.json
.github/: restyled.yaml
.github/workflows/: release-pr.yml  release.yml  restyled.yml
aoc-runner-macros/: Cargo.toml
aoc-runner-macros/src/: lib.rs
aoc-zen-runner-macros/: CHANGELOG.md  Cargo.toml
aoc-zen-runner-macros/src/: aggregate.rs  domain.rs  lib.rs  partflag.rs
aoc-zen-runner-macros/src/parser/: caseargs.rs  genargs.rs  macroargs.rs  mod.rs  solutionargs.rs  solverargs.rs
runner/: CHANGELOG.md  Cargo.toml
runner/src/: cli.rs  codegen.rs  commands.rs  lib.rs  main.rs
runner/src/iodomain/: cargo.rs  credentials.rs  mod.rs
runner/src/templates/: dayX.rs
runner/tests/cmd/: login.stdout  login.toml
sample/: .gitignore  Cargo.toml
sample/2015/: Cargo.toml
sample/2015/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs
sample/2021/: Cargo.toml
sample/2021/src/: day6.rs
sample/2022/: .gitignore  Cargo.toml
sample/2022/src/: day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs
src/: day04.rs  lib.rs
