[package]
name = "aoc-runner-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.71"}
proc-macro2 = { version = "1.0.63", features = ["span-locations"] }
quote = "1.0.28"
syn = { version = "2.0.22", features = ["full", "extra-traits", "fold", "visit", "visit-mut", "parsing", "proc-macro"] }
thiserror = "1.0.40"
