[package]
name = "aoc-runner-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.72"}
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.31"
syn = { version = "2.0.26", features = ["full", "extra-traits", "fold", "visit", "visit-mut", "parsing", "proc-macro"] }
thiserror = "1.0.43"
