[package]
name = "aoc-zen-runner-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.75"}
proc-macro2 = { version = "1.0.70", features = ["span-locations"] }
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "extra-traits", "fold", "visit", "visit-mut", "parsing", "proc-macro"] }
thiserror = "1.0.50"
microbench = "0.5.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
criterion =  { version = "0.5.1", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"]}
plotters = "0.3.5"
