[package]
name = "cargo-aoc-zen-runner"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/proegssilb/aoc-zen-runner"
license = "Apache-2.0"
description = "An Advent of Code runner aiming to streamline a variety of repository layouts and tasks."

[lib]
name = "aoc_zen_runner"
path = "src/lib.rs"


[[bin]]
name="cargo-aoc"
path="src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
cargo_metadata = "0.18.1"
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.10", features = ["derive", "cargo", "env", "unicode", "string"] }
directories = "5.0.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "cookies", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.193", features = ["derive", "serde_derive"] }
serde_derive = "1.0.193"
thiserror = "1.0.50"
trycmd = { version = "0.14.19", features = [] }
