[package]
name = "advent-of-code-2015"
version = "0.1.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
edition = "2021"

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-zen-runner-macros = {path = "../../aoc-zen-runner-macros"}
microbench = "0.5.0"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf", "criterion"] }
